// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UpdateDetails: Render after opening modal 1`] = `
Array [
  <Modal
    animationType="slide"
    hardwareAccelerated={false}
    onRequestClose={[Function]}
    transparent={false}
    visible={true}
  >
    <View
      style={
        Array [
          Object {
            "backgroundColor": "#3A4158",
            "flexBasis": 0,
            "flexGrow": 1,
            "flexShrink": 1,
          },
        ]
      }
    >
      <View
        onLayout={[Function]}
        style={
          Array [
            Array [
              Object {
                "height": 1334,
                "justifyContent": "center",
                "paddingHorizontal": 20,
              },
            ],
            Object {
              "paddingBottom": 0,
            },
          ]
        }
      >
        <View
          accessible={true}
          isTVSelectable={true}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
              "paddingBottom": 10,
              "paddingLeft": 10,
              "paddingRight": 10,
              "paddingTop": 10,
              "position": "absolute",
              "right": 20,
              "top": 64,
            }
          }
          testID="closeModal"
        >
          <Text
            allowFontScaling={false}
            style={
              Array [
                Object {
                  "color": undefined,
                  "fontSize": 30,
                },
                Object {
                  "color": "#FFFFFF",
                },
                Object {
                  "fontFamily": "Font Awesome 5 Free",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                Object {
                  "fontWeight": "700",
                },
              ]
            }
          >
            
          </Text>
        </View>
        <View>
          <Text
            style={
              Array [
                Object {
                  "color": "#FFFFFF",
                  "fontWeight": "bold",
                  "paddingBottom": 5,
                  "paddingLeft": 5,
                  "paddingRight": 5,
                  "paddingTop": 5,
                },
              ]
            }
          >
            Full name
          </Text>
          <TextInput
            allowFontScaling={true}
            isFocused={false}
            onBlur={[Function]}
            onChangeText={[Function]}
            onFocus={[Function]}
            placeholder="Benjamin Franklin"
            placeholderTextColor="#7B8794"
            rejectResponderTermination={true}
            style={
              Array [
                Object {
                  "borderColor": "#CBD2D9",
                  "borderRadius": 4,
                  "borderWidth": 2,
                  "color": "#FFFFFF",
                  "fontSize": 18,
                  "height": 60,
                  "marginBottom": 20,
                  "minWidth": 240,
                  "paddingBottom": 10,
                  "paddingLeft": 10,
                  "paddingRight": 10,
                  "paddingTop": 10,
                },
              ]
            }
            testID="usernameInput"
            underlineColorAndroid="transparent"
            value="Harry Potter"
          />
        </View>
        <View
          style={
            Object {
              "borderRadius": 8,
            }
          }
        >
          <View
            accessible={true}
            isTVSelectable={true}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "opacity": 1,
              }
            }
            testID="saveChanges"
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#111111",
                  "borderColor": "#111111",
                  "borderRadius": 8,
                  "borderWidth": 2,
                  "flexDirection": "row",
                  "justifyContent": "center",
                  "padding": 8,
                  "paddingVertical": 10,
                }
              }
            >
              <Text
                style={
                  Object {
                    "color": "white",
                    "fontFamily": "Raleway",
                    "fontSize": 16,
                    "fontWeight": "bold",
                    "paddingBottom": 1,
                    "paddingTop": 2,
                    "textAlign": "center",
                  }
                }
              >
                Save changes
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </Modal>,
  <View
    accessible={true}
    isTVSelectable={true}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "flexDirection": "row",
        "opacity": 1,
        "paddingHorizontal": 5,
        "paddingVertical": 10,
      }
    }
    testID="updateName"
  >
    <Text
      style={
        Array [
          Object {
            "color": "#1F2933",
            "flexBasis": 0,
            "flexGrow": 1,
            "flexShrink": 1,
          },
          Object {
            "fontFamily": "Raleway",
            "fontSize": 16,
          },
        ]
      }
    >
      Update your name
    </Text>
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "color": undefined,
            "fontSize": 20,
          },
          Object {
            "color": "#7B8794",
            "fontSize": 20,
            "fontWeight": "bold",
          },
          Object {
            "fontFamily": "Font Awesome 5 Free",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          Object {
            "fontWeight": "700",
          },
        ]
      }
    >
      
    </Text>
  </View>,
]
`;

exports[`UpdateDetails: Render default 1`] = `
Array [
  <Modal
    animationType="slide"
    hardwareAccelerated={false}
    onRequestClose={[Function]}
    transparent={false}
    visible={false}
  >
    <View
      style={
        Array [
          Object {
            "backgroundColor": "#3A4158",
            "flexBasis": 0,
            "flexGrow": 1,
            "flexShrink": 1,
          },
        ]
      }
    >
      <View
        onLayout={[Function]}
        style={
          Array [
            Array [
              Object {
                "height": 1334,
                "justifyContent": "center",
                "paddingHorizontal": 20,
              },
            ],
            Object {
              "paddingBottom": 0,
            },
          ]
        }
      >
        <View
          accessible={true}
          isTVSelectable={true}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
              "paddingBottom": 10,
              "paddingLeft": 10,
              "paddingRight": 10,
              "paddingTop": 10,
              "position": "absolute",
              "right": 20,
              "top": 64,
            }
          }
          testID="closeModal"
        >
          <Text
            allowFontScaling={false}
            style={
              Array [
                Object {
                  "color": undefined,
                  "fontSize": 30,
                },
                Object {
                  "color": "#FFFFFF",
                },
                Object {
                  "fontFamily": "Font Awesome 5 Free",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                Object {
                  "fontWeight": "700",
                },
              ]
            }
          >
            
          </Text>
        </View>
        <View>
          <Text
            style={
              Array [
                Object {
                  "color": "#FFFFFF",
                  "fontWeight": "bold",
                  "paddingBottom": 5,
                  "paddingLeft": 5,
                  "paddingRight": 5,
                  "paddingTop": 5,
                },
              ]
            }
          >
            Full name
          </Text>
          <TextInput
            allowFontScaling={true}
            isFocused={false}
            onBlur={[Function]}
            onChangeText={[Function]}
            onFocus={[Function]}
            placeholder="Benjamin Franklin"
            placeholderTextColor="#7B8794"
            rejectResponderTermination={true}
            style={
              Array [
                Object {
                  "borderColor": "#CBD2D9",
                  "borderRadius": 4,
                  "borderWidth": 2,
                  "color": "#FFFFFF",
                  "fontSize": 18,
                  "height": 60,
                  "marginBottom": 20,
                  "minWidth": 240,
                  "paddingBottom": 10,
                  "paddingLeft": 10,
                  "paddingRight": 10,
                  "paddingTop": 10,
                },
              ]
            }
            testID="usernameInput"
            underlineColorAndroid="transparent"
            value="Harry Potter"
          />
        </View>
        <View
          style={
            Object {
              "borderRadius": 8,
            }
          }
        >
          <View
            accessible={true}
            isTVSelectable={true}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "opacity": 1,
              }
            }
            testID="saveChanges"
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#111111",
                  "borderColor": "#111111",
                  "borderRadius": 8,
                  "borderWidth": 2,
                  "flexDirection": "row",
                  "justifyContent": "center",
                  "padding": 8,
                  "paddingVertical": 10,
                }
              }
            >
              <Text
                style={
                  Object {
                    "color": "white",
                    "fontFamily": "Raleway",
                    "fontSize": 16,
                    "fontWeight": "bold",
                    "paddingBottom": 1,
                    "paddingTop": 2,
                    "textAlign": "center",
                  }
                }
              >
                Save changes
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </Modal>,
  <View
    accessible={true}
    isTVSelectable={true}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "flexDirection": "row",
        "opacity": 1,
        "paddingHorizontal": 5,
        "paddingVertical": 10,
      }
    }
    testID="updateName"
  >
    <Text
      style={
        Array [
          Object {
            "color": "#1F2933",
            "flexBasis": 0,
            "flexGrow": 1,
            "flexShrink": 1,
          },
          Object {
            "fontFamily": "Raleway",
            "fontSize": 16,
          },
        ]
      }
    >
      Update your name
    </Text>
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "color": undefined,
            "fontSize": 20,
          },
          Object {
            "color": "#7B8794",
            "fontSize": 20,
            "fontWeight": "bold",
          },
          Object {
            "fontFamily": "Font Awesome 5 Free",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          Object {
            "fontWeight": "700",
          },
        ]
      }
    >
      
    </Text>
  </View>,
]
`;

exports[`UpdateDetails: Render default 2`] = `
Array [
  <Modal
    animationType="slide"
    hardwareAccelerated={false}
    onRequestClose={[Function]}
    transparent={false}
    visible={false}
  >
    <View
      style={
        Array [
          Object {
            "backgroundColor": "#3A4158",
            "flexBasis": 0,
            "flexGrow": 1,
            "flexShrink": 1,
          },
        ]
      }
    >
      <View
        onLayout={[Function]}
        style={
          Array [
            Array [
              Object {
                "height": 1334,
                "justifyContent": "center",
                "paddingHorizontal": 20,
              },
            ],
            Object {
              "paddingBottom": 0,
            },
          ]
        }
      >
        <View
          accessible={true}
          isTVSelectable={true}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
              "paddingBottom": 10,
              "paddingLeft": 10,
              "paddingRight": 10,
              "paddingTop": 10,
              "position": "absolute",
              "right": 20,
              "top": 64,
            }
          }
          testID="closeModal"
        >
          <Text
            allowFontScaling={false}
            style={
              Array [
                Object {
                  "color": undefined,
                  "fontSize": 30,
                },
                Object {
                  "color": "#FFFFFF",
                },
                Object {
                  "fontFamily": "Font Awesome 5 Free",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                Object {
                  "fontWeight": "700",
                },
              ]
            }
          >
            
          </Text>
        </View>
        <View>
          <Text
            style={
              Array [
                Object {
                  "color": "#FFFFFF",
                  "fontWeight": "bold",
                  "paddingBottom": 5,
                  "paddingLeft": 5,
                  "paddingRight": 5,
                  "paddingTop": 5,
                },
              ]
            }
          >
            Full name
          </Text>
          <TextInput
            allowFontScaling={true}
            isFocused={false}
            onBlur={[Function]}
            onChangeText={[Function]}
            onFocus={[Function]}
            placeholder="Benjamin Franklin"
            placeholderTextColor="#7B8794"
            rejectResponderTermination={true}
            style={
              Array [
                Object {
                  "borderColor": "#CBD2D9",
                  "borderRadius": 4,
                  "borderWidth": 2,
                  "color": "#FFFFFF",
                  "fontSize": 18,
                  "height": 60,
                  "marginBottom": 20,
                  "minWidth": 240,
                  "paddingBottom": 10,
                  "paddingLeft": 10,
                  "paddingRight": 10,
                  "paddingTop": 10,
                },
              ]
            }
            testID="usernameInput"
            underlineColorAndroid="transparent"
            value="Harry Potter"
          />
        </View>
        <View
          style={
            Object {
              "borderRadius": 8,
            }
          }
        >
          <View
            accessible={true}
            isTVSelectable={true}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "opacity": 1,
              }
            }
            testID="saveChanges"
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#111111",
                  "borderColor": "#111111",
                  "borderRadius": 8,
                  "borderWidth": 2,
                  "flexDirection": "row",
                  "justifyContent": "center",
                  "padding": 8,
                  "paddingVertical": 10,
                }
              }
            >
              <Text
                style={
                  Object {
                    "color": "white",
                    "fontFamily": "Raleway",
                    "fontSize": 16,
                    "fontWeight": "bold",
                    "paddingBottom": 1,
                    "paddingTop": 2,
                    "textAlign": "center",
                  }
                }
              >
                Save changes
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </Modal>,
  <View
    accessible={true}
    isTVSelectable={true}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "flexDirection": "row",
        "opacity": 1,
        "paddingHorizontal": 5,
        "paddingVertical": 10,
      }
    }
    testID="updateName"
  >
    <Text
      style={
        Array [
          Object {
            "color": "#1F2933",
            "flexBasis": 0,
            "flexGrow": 1,
            "flexShrink": 1,
          },
          Object {
            "fontFamily": "Raleway",
            "fontSize": 16,
          },
        ]
      }
    >
      Update your name
    </Text>
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "color": undefined,
            "fontSize": 20,
          },
          Object {
            "color": "#7B8794",
            "fontSize": 20,
            "fontWeight": "bold",
          },
          Object {
            "fontFamily": "Font Awesome 5 Free",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          Object {
            "fontWeight": "700",
          },
        ]
      }
    >
      
    </Text>
  </View>,
]
`;

exports[`UpdateDetails: Render default 3`] = `
Array [
  <Modal
    animationType="slide"
    hardwareAccelerated={false}
    onRequestClose={[Function]}
    transparent={false}
    visible={false}
  >
    <View
      style={
        Array [
          Object {
            "backgroundColor": "#3A4158",
            "flexBasis": 0,
            "flexGrow": 1,
            "flexShrink": 1,
          },
        ]
      }
    >
      <View
        onLayout={[Function]}
        style={
          Array [
            Array [
              Object {
                "height": 1334,
                "justifyContent": "center",
                "paddingHorizontal": 20,
              },
            ],
            Object {
              "paddingBottom": 0,
            },
          ]
        }
      >
        <View
          accessible={true}
          isTVSelectable={true}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
              "paddingBottom": 10,
              "paddingLeft": 10,
              "paddingRight": 10,
              "paddingTop": 10,
              "position": "absolute",
              "right": 20,
              "top": 64,
            }
          }
          testID="closeModal"
        >
          <Text
            allowFontScaling={false}
            style={
              Array [
                Object {
                  "color": undefined,
                  "fontSize": 30,
                },
                Object {
                  "color": "#FFFFFF",
                },
                Object {
                  "fontFamily": "Font Awesome 5 Free",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                Object {
                  "fontWeight": "700",
                },
              ]
            }
          >
            
          </Text>
        </View>
        <View>
          <Text
            style={
              Array [
                Object {
                  "color": "#FFFFFF",
                  "fontWeight": "bold",
                  "paddingBottom": 5,
                  "paddingLeft": 5,
                  "paddingRight": 5,
                  "paddingTop": 5,
                },
              ]
            }
          >
            Full name
          </Text>
          <TextInput
            allowFontScaling={true}
            isFocused={false}
            onBlur={[Function]}
            onChangeText={[Function]}
            onFocus={[Function]}
            placeholder="Benjamin Franklin"
            placeholderTextColor="#7B8794"
            rejectResponderTermination={true}
            style={
              Array [
                Object {
                  "borderColor": "#CBD2D9",
                  "borderRadius": 4,
                  "borderWidth": 2,
                  "color": "#FFFFFF",
                  "fontSize": 18,
                  "height": 60,
                  "marginBottom": 20,
                  "minWidth": 240,
                  "paddingBottom": 10,
                  "paddingLeft": 10,
                  "paddingRight": 10,
                  "paddingTop": 10,
                },
              ]
            }
            testID="usernameInput"
            underlineColorAndroid="transparent"
            value="Harry Potter"
          />
        </View>
        <View
          style={
            Object {
              "borderRadius": 8,
            }
          }
        >
          <View
            accessible={true}
            isTVSelectable={true}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "opacity": 1,
              }
            }
            testID="saveChanges"
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#111111",
                  "borderColor": "#111111",
                  "borderRadius": 8,
                  "borderWidth": 2,
                  "flexDirection": "row",
                  "justifyContent": "center",
                  "padding": 8,
                  "paddingVertical": 10,
                }
              }
            >
              <Text
                style={
                  Object {
                    "color": "white",
                    "fontFamily": "Raleway",
                    "fontSize": 16,
                    "fontWeight": "bold",
                    "paddingBottom": 1,
                    "paddingTop": 2,
                    "textAlign": "center",
                  }
                }
              >
                Save changes
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </Modal>,
  <View
    accessible={true}
    isTVSelectable={true}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "flexDirection": "row",
        "opacity": 1,
        "paddingHorizontal": 5,
        "paddingVertical": 10,
      }
    }
    testID="updateName"
  >
    <Text
      style={
        Array [
          Object {
            "color": "#1F2933",
            "flexBasis": 0,
            "flexGrow": 1,
            "flexShrink": 1,
          },
          Object {
            "fontFamily": "Raleway",
            "fontSize": 16,
          },
        ]
      }
    >
      Update your name
    </Text>
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "color": undefined,
            "fontSize": 20,
          },
          Object {
            "color": "#7B8794",
            "fontSize": 20,
            "fontWeight": "bold",
          },
          Object {
            "fontFamily": "Font Awesome 5 Free",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          Object {
            "fontWeight": "700",
          },
        ]
      }
    >
      
    </Text>
  </View>,
]
`;

exports[`UpdateDetails: Render default 4`] = `
Array [
  <Modal
    animationType="slide"
    hardwareAccelerated={false}
    onRequestClose={[Function]}
    transparent={false}
    visible={false}
  >
    <View
      style={
        Array [
          Object {
            "backgroundColor": "#3A4158",
            "flexBasis": 0,
            "flexGrow": 1,
            "flexShrink": 1,
          },
        ]
      }
    >
      <View
        onLayout={[Function]}
        style={
          Array [
            Array [
              Object {
                "height": 1334,
                "justifyContent": "center",
                "paddingHorizontal": 20,
              },
            ],
            Object {
              "paddingBottom": 0,
            },
          ]
        }
      >
        <View
          accessible={true}
          isTVSelectable={true}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
              "paddingBottom": 10,
              "paddingLeft": 10,
              "paddingRight": 10,
              "paddingTop": 10,
              "position": "absolute",
              "right": 20,
              "top": 64,
            }
          }
          testID="closeModal"
        >
          <Text
            allowFontScaling={false}
            style={
              Array [
                Object {
                  "color": undefined,
                  "fontSize": 30,
                },
                Object {
                  "color": "#FFFFFF",
                },
                Object {
                  "fontFamily": "Font Awesome 5 Free",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                Object {
                  "fontWeight": "700",
                },
              ]
            }
          >
            
          </Text>
        </View>
        <View>
          <Text
            style={
              Array [
                Object {
                  "color": "#FFFFFF",
                  "fontWeight": "bold",
                  "paddingBottom": 5,
                  "paddingLeft": 5,
                  "paddingRight": 5,
                  "paddingTop": 5,
                },
              ]
            }
          >
            Full name
          </Text>
          <TextInput
            allowFontScaling={true}
            isFocused={false}
            onBlur={[Function]}
            onChangeText={[Function]}
            onFocus={[Function]}
            placeholder="Benjamin Franklin"
            placeholderTextColor="#7B8794"
            rejectResponderTermination={true}
            style={
              Array [
                Object {
                  "borderColor": "#CBD2D9",
                  "borderRadius": 4,
                  "borderWidth": 2,
                  "color": "#FFFFFF",
                  "fontSize": 18,
                  "height": 60,
                  "marginBottom": 20,
                  "minWidth": 240,
                  "paddingBottom": 10,
                  "paddingLeft": 10,
                  "paddingRight": 10,
                  "paddingTop": 10,
                },
              ]
            }
            testID="usernameInput"
            underlineColorAndroid="transparent"
            value="Hermione Granger"
          />
        </View>
        <View
          style={
            Object {
              "borderRadius": 8,
            }
          }
        >
          <View
            accessible={true}
            isTVSelectable={true}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "opacity": 1,
              }
            }
            testID="saveChanges"
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#111111",
                  "borderColor": "#111111",
                  "borderRadius": 8,
                  "borderWidth": 2,
                  "flexDirection": "row",
                  "justifyContent": "center",
                  "opacity": 0.48,
                  "padding": 8,
                  "paddingVertical": 10,
                }
              }
            >
              <Text
                style={
                  Object {
                    "color": Object {
                      "color": Array [
                        208,
                        8,
                        63,
                      ],
                      "model": "hsl",
                      "valpha": 1,
                    },
                    "fontFamily": "Raleway",
                    "fontSize": 16,
                    "fontWeight": "bold",
                    "paddingBottom": 1,
                    "paddingTop": 2,
                    "textAlign": "center",
                  }
                }
              >
                Save changes
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </Modal>,
  <View
    accessible={true}
    isTVSelectable={true}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "flexDirection": "row",
        "opacity": 1,
        "paddingHorizontal": 5,
        "paddingVertical": 10,
      }
    }
    testID="updateName"
  >
    <Text
      style={
        Array [
          Object {
            "color": "#1F2933",
            "flexBasis": 0,
            "flexGrow": 1,
            "flexShrink": 1,
          },
          Object {
            "fontFamily": "Raleway",
            "fontSize": 16,
          },
        ]
      }
    >
      Update your name
    </Text>
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "color": undefined,
            "fontSize": 20,
          },
          Object {
            "color": "#7B8794",
            "fontSize": 20,
            "fontWeight": "bold",
          },
          Object {
            "fontFamily": "Font Awesome 5 Free",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          Object {
            "fontWeight": "700",
          },
        ]
      }
    >
      
    </Text>
  </View>,
]
`;

exports[`UpdateDetails: Render name error 1`] = `
Array [
  <Modal
    animationType="slide"
    hardwareAccelerated={false}
    onRequestClose={[Function]}
    transparent={false}
    visible={true}
  >
    <View
      style={
        Array [
          Object {
            "backgroundColor": "#3A4158",
            "flexBasis": 0,
            "flexGrow": 1,
            "flexShrink": 1,
          },
        ]
      }
    >
      <View
        onLayout={[Function]}
        style={
          Array [
            Array [
              Object {
                "height": 1334,
                "justifyContent": "center",
                "paddingHorizontal": 20,
              },
            ],
            Object {
              "paddingBottom": 0,
            },
          ]
        }
      >
        <View
          accessible={true}
          isTVSelectable={true}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
              "paddingBottom": 10,
              "paddingLeft": 10,
              "paddingRight": 10,
              "paddingTop": 10,
              "position": "absolute",
              "right": 20,
              "top": 64,
            }
          }
          testID="closeModal"
        >
          <Text
            allowFontScaling={false}
            style={
              Array [
                Object {
                  "color": undefined,
                  "fontSize": 30,
                },
                Object {
                  "color": "#FFFFFF",
                },
                Object {
                  "fontFamily": "Font Awesome 5 Free",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                Object {
                  "fontWeight": "700",
                },
              ]
            }
          >
            
          </Text>
        </View>
        <View>
          <Text
            style={
              Array [
                Object {
                  "color": "#FFFFFF",
                  "fontWeight": "bold",
                  "paddingBottom": 5,
                  "paddingLeft": 5,
                  "paddingRight": 5,
                  "paddingTop": 5,
                },
              ]
            }
          >
            Full name
          </Text>
          <TextInput
            allowFontScaling={true}
            isFocused={false}
            onBlur={[Function]}
            onChangeText={[Function]}
            onFocus={[Function]}
            placeholder="Benjamin Franklin"
            placeholderTextColor="#7B8794"
            rejectResponderTermination={true}
            style={
              Array [
                Object {
                  "borderColor": "#CBD2D9",
                  "borderRadius": 4,
                  "borderWidth": 2,
                  "color": "#FFFFFF",
                  "fontSize": 18,
                  "height": 60,
                  "marginBottom": 20,
                  "minWidth": 240,
                  "paddingBottom": 10,
                  "paddingLeft": 10,
                  "paddingRight": 10,
                  "paddingTop": 10,
                },
              ]
            }
            testID="usernameInput"
            underlineColorAndroid="transparent"
            value=""
          />
          <Text
            style={
              Array [
                Object {
                  "color": "#F7C948",
                  "fontSize": 18,
                  "fontWeight": "bold",
                  "marginBottom": 20,
                  "minHeight": 20,
                },
              ]
            }
          >
            You need to provide your full name.
          </Text>
        </View>
        <View
          style={
            Object {
              "borderRadius": 8,
            }
          }
        >
          <View
            accessible={true}
            isTVSelectable={true}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "opacity": 1,
              }
            }
            testID="saveChanges"
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#111111",
                  "borderColor": "#111111",
                  "borderRadius": 8,
                  "borderWidth": 2,
                  "flexDirection": "row",
                  "justifyContent": "center",
                  "opacity": 0.48,
                  "padding": 8,
                  "paddingVertical": 10,
                }
              }
            >
              <Text
                style={
                  Object {
                    "color": Object {
                      "color": Array [
                        208,
                        8,
                        63,
                      ],
                      "model": "hsl",
                      "valpha": 1,
                    },
                    "fontFamily": "Raleway",
                    "fontSize": 16,
                    "fontWeight": "bold",
                    "paddingBottom": 1,
                    "paddingTop": 2,
                    "textAlign": "center",
                  }
                }
              >
                Save changes
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </Modal>,
  <View
    accessible={true}
    isTVSelectable={true}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "flexDirection": "row",
        "opacity": 1,
        "paddingHorizontal": 5,
        "paddingVertical": 10,
      }
    }
    testID="updateName"
  >
    <Text
      style={
        Array [
          Object {
            "color": "#1F2933",
            "flexBasis": 0,
            "flexGrow": 1,
            "flexShrink": 1,
          },
          Object {
            "fontFamily": "Raleway",
            "fontSize": 16,
          },
        ]
      }
    >
      Update your name
    </Text>
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "color": undefined,
            "fontSize": 20,
          },
          Object {
            "color": "#7B8794",
            "fontSize": 20,
            "fontWeight": "bold",
          },
          Object {
            "fontFamily": "Font Awesome 5 Free",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          Object {
            "fontWeight": "700",
          },
        ]
      }
    >
      
    </Text>
  </View>,
]
`;

exports[`UpdateDetails: Render with unexpected error 1`] = `
Array [
  <Modal
    animationType="slide"
    hardwareAccelerated={false}
    onRequestClose={[Function]}
    transparent={false}
    visible={true}
  >
    <View
      style={
        Array [
          Object {
            "backgroundColor": "#3A4158",
            "flexBasis": 0,
            "flexGrow": 1,
            "flexShrink": 1,
          },
        ]
      }
    >
      <View
        onLayout={[Function]}
        style={
          Array [
            Array [
              Object {
                "height": 1334,
                "justifyContent": "center",
                "paddingHorizontal": 20,
              },
            ],
            Object {
              "paddingBottom": 0,
            },
          ]
        }
      >
        <View
          accessible={true}
          isTVSelectable={true}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
              "paddingBottom": 10,
              "paddingLeft": 10,
              "paddingRight": 10,
              "paddingTop": 10,
              "position": "absolute",
              "right": 20,
              "top": 64,
            }
          }
          testID="closeModal"
        >
          <Text
            allowFontScaling={false}
            style={
              Array [
                Object {
                  "color": undefined,
                  "fontSize": 30,
                },
                Object {
                  "color": "#FFFFFF",
                },
                Object {
                  "fontFamily": "Font Awesome 5 Free",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                Object {
                  "fontWeight": "700",
                },
              ]
            }
          >
            
          </Text>
        </View>
        <View>
          <Text
            style={
              Array [
                Object {
                  "color": "#FFFFFF",
                  "fontWeight": "bold",
                  "paddingBottom": 5,
                  "paddingLeft": 5,
                  "paddingRight": 5,
                  "paddingTop": 5,
                },
              ]
            }
          >
            Full name
          </Text>
          <TextInput
            allowFontScaling={true}
            isFocused={false}
            onBlur={[Function]}
            onChangeText={[Function]}
            onFocus={[Function]}
            placeholder="Benjamin Franklin"
            placeholderTextColor="#7B8794"
            rejectResponderTermination={true}
            style={
              Array [
                Object {
                  "borderColor": "#CBD2D9",
                  "borderRadius": 4,
                  "borderWidth": 2,
                  "color": "#FFFFFF",
                  "fontSize": 18,
                  "height": 60,
                  "marginBottom": 20,
                  "minWidth": 240,
                  "paddingBottom": 10,
                  "paddingLeft": 10,
                  "paddingRight": 10,
                  "paddingTop": 10,
                },
              ]
            }
            testID="usernameInput"
            underlineColorAndroid="transparent"
            value="Hermione Granger"
          />
        </View>
        <Text
          style={
            Array [
              Object {
                "color": "#F7C948",
                "fontSize": 18,
                "fontWeight": "bold",
                "marginBottom": 20,
                "minHeight": 20,
              },
            ]
          }
        >
          Something went wrong, please try again later.
        </Text>
        <View
          style={
            Object {
              "borderRadius": 8,
            }
          }
        >
          <View
            accessible={true}
            isTVSelectable={true}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "opacity": 1,
              }
            }
            testID="saveChanges"
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#111111",
                  "borderColor": "#111111",
                  "borderRadius": 8,
                  "borderWidth": 2,
                  "flexDirection": "row",
                  "justifyContent": "center",
                  "opacity": 0.48,
                  "padding": 8,
                  "paddingVertical": 10,
                }
              }
            >
              <Text
                style={
                  Object {
                    "color": Object {
                      "color": Array [
                        208,
                        8,
                        63,
                      ],
                      "model": "hsl",
                      "valpha": 1,
                    },
                    "fontFamily": "Raleway",
                    "fontSize": 16,
                    "fontWeight": "bold",
                    "paddingBottom": 1,
                    "paddingTop": 2,
                    "textAlign": "center",
                  }
                }
              >
                Save changes
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </Modal>,
  <View
    accessible={true}
    isTVSelectable={true}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "flexDirection": "row",
        "opacity": 1,
        "paddingHorizontal": 5,
        "paddingVertical": 10,
      }
    }
    testID="updateName"
  >
    <Text
      style={
        Array [
          Object {
            "color": "#1F2933",
            "flexBasis": 0,
            "flexGrow": 1,
            "flexShrink": 1,
          },
          Object {
            "fontFamily": "Raleway",
            "fontSize": 16,
          },
        ]
      }
    >
      Update your name
    </Text>
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "color": undefined,
            "fontSize": 20,
          },
          Object {
            "color": "#7B8794",
            "fontSize": 20,
            "fontWeight": "bold",
          },
          Object {
            "fontFamily": "Font Awesome 5 Free",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          Object {
            "fontWeight": "700",
          },
        ]
      }
    >
      
    </Text>
  </View>,
]
`;

exports[`UpdateDetails: Store user name 1`] = `
Array [
  Array [
    "harry@hogwarts.com",
    "Hermione Granger",
    [Function],
  ],
]
`;

exports[`UpdateDetails: Store user name 2`] = `
Array [
  Array [
    "harry@hogwarts.com",
    "Hermione Granger",
    [Function],
  ],
]
`;
